--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,201 @@
-.App {
-  text-align: center;
+.header-container {
+  display: flex;
+  width: 100%;
+  padding: 30px;
+  justify-content: space-between;
+  background-color: rgb(248, 243, 243);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.school {
+  width: 50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.account {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  gap: 40px;
+  width: 50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.navbar {
+  width: 18%;
+  /* background-color: rgb(51, 51, 128); */
+  background-color: rgb(39, 39, 106);
+}
+
+.student-details {
+  width: 82%;
+}
+
+.stu {
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.students {
+  display: flex;
+  margin-left: 20px;
+}
+
+.stud-optn {
+  display: flex;
+  width: 85%;
+  gap: 50px;
+}
+
+.stud-btn {
+  display: flex;
+  width: 15%;
+}
+
+.student-options {
+  width: 200px;
+  height: 40px;
+  border-radius: 8px;
+}
+
+.search-student {
+  width: 250px;
+  height: 35px;
+  border-radius: 8px;
+}
+
+.leave-btn {
+  width: 150px;
+  height: 40px;
+  border-radius: 20px;
+  border: 2px solid yellow;
+}
+
+.student-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 30px;
+}
+
+.student-heading th,
+.student-body td {
+  /* border: 1px solid #ddd; */
+  padding: 17px;
+}
+
+.student-heading th {
+  background-color: rgb(224, 221, 221);
+  text-align: left;
+}
+
+.student-body td {
+  text-align: left;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.student-name {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 12px;
+}
+
+.name {
+  background-color: rgb(236, 176, 64);
+  width: 250px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.super-admin {
+  margin-top: 30px;
+  margin-left: 30px;
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 20px;
+}
+
+.acad {
+  margin-top: 20px;
+  margin-left: 30px;
+  background-color: rgb(236, 176, 64);
+  width: full;
+  padding: 10px;
+}
+
+.acad-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 20px;
+  padding: 20px;
+  background-color: rgb(236, 176, 64);
+  border-radius: 20px;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  z-index: 1000;
 }
 
-.App-link {
-  color: #61dafb;
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 500px;
+  height: 400px;
+  max-width: 100%;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.landing-container {
+  display: flex;
+  width: 100%;
+  height: 938px;
+}
+
+.landing-img {
+  display: flex;
+  width: 60%;
+}
+
+.landing-comp {
+  display: flex;
+  width: 40%;
+  justify-content: space-around;
+}
+
+.leave-form,
+input,
+textarea {
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
+.comp-content {
+  margin-top: 40px;
 }
